--- a/lisSysEJS/views/index.ejs
+++ b/lisSysEJS/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Welcome to Your Mother</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img">
   </head>
   
   <body>
