--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,23 @@
 <html>
   <head>
     <title>Welcome to Your Mother</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
   </head>
-  
+
   <body>
-    
+    <h1 class="header-title">Welcome to Your Mother</h1>
+
+    <div class="container">
+      <div class="sidebar">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="main-content"></div>
+    </div>
   </body>
 </html>
