--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Your Mother</title>
+    <title>Registration</title>
+    <style> 
+      body{
+        background-image: "Background.jpg";
+      }
+    </style>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
   </head>
@@ -16,6 +21,7 @@
           <li>About</li>
           <li>Services</li>
           <li>Contact</li>
+          <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
         </ul>
       </div>
       <div class="main-content"></div>
