--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,11 @@
   </head>
   
   <body>
-    
+    <button
+    type="button"
+    id="runDB"
+    >
+    button
+    </button>
   </body>
 </html>
