--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Your Mother</title>
+    <title>Wishlist</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link
       rel="stylesheet"
@@ -19,15 +19,13 @@
   </head>
 
   <body>
-    <h1 class="header-title">Welcome to Your Mother</h1>
+    <h1 class="header-title">Wishlist</h1>
 
     <div class="container">
       <div class="sidebar">
         <ul>
           <li>
-            <a href="/index"
-              ><i class="bi bi-house-heart-fill"></i>&nbsp; Home</a
-            >
+            <a href="/"><i class="bi bi-house-heart-fill"></i>&nbsp; Home</a>
           </li>
           <li>
             <a href="/wishlist"
