--- a/views/indox2.ejs
+++ b/views/indox2.ejs
@@ -13,7 +13,6 @@
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: "/images/Background.png";
     }
 
     .login-box {
@@ -34,6 +33,9 @@
     }
 
     .login-box input[type="text"],
+    .login-box input[type="date"],
+    .login-box input[type="email"],
+    .login-box input[type="submit"],
     .login-box input[type="password"] {
       width: 80%;
       padding: 10px;
@@ -45,26 +47,13 @@
     .login-box input[type="submit"] {
       width: 30%;
       padding: 10px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .login-box input[type="submit"]:hover {
-      background-color: #0056b3;
-    }
-    .login-box input[type="button"] {
-      width: 30%;
-      padding: 10px;
       background-color: #A52A2A;
       color: #fff;
       border: none;
       border-radius: 4px;
       cursor: pointer;
     }
-    .login-box input[type="button"]:hover { 
+    .login-box input[type="submit"]:hover { 
       background-color: #A52A2A;
     }
   </style>
@@ -73,14 +62,14 @@
 
   <div class="login-box">
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
-    <p>Registered Member’s Login</p>
+    <p>Create an Account</p>
     <form action="/login" method="POST">
+    <input type="email" name="emailaddress" placeholder="Email Address" required>
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
-      <input type="submit" value="Sign in">
-      <p>Or</p>
-      <p>New Registration</p>
-      <input type="button" value="Sign up now">
+      <input type="date" name="DOB" placeholder="Date of Birth" required>
+      <input type="text" name="address" placeholder="Address" required>
+      <input type="submit" value="Sign up now">
     </form>
   </div>
 
