--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,7 @@
           <li><i class="bi bi-file-plus-fill"></i>&nbsp; Reservation</li>
           <li><i class="bi bi-gear-fill"></i>&nbsp; Settings</li>
           <li><i class="bi bi-door-open-fill"></i>&nbsp; Log out</li>
+          <li><button id="runDB">runDB</button></li>
         </ul>
       </div>
       <div class="main-content"></div>
