--- a/views/indox.ejs
+++ b/views/indox.ejs
@@ -13,7 +13,8 @@
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: "/images/Background.png";
+      background: url("/images/Background.jpg") no-repeat center center fixed;
+      background-size: cover;
     }
 
     .login-box {
@@ -55,7 +56,7 @@
       background-color: #0056b3;
     }
     .login-box input[type="button"] {
-      width: 30%;
+      width: 50%;
       padding: 10px;
       background-color: #A52A2A;
       color: #fff;
@@ -69,7 +70,6 @@
   </style>
 </head>
 <body>
-
   <div class="login-box">
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Registered Member’s Login</p>
@@ -79,7 +79,7 @@
       <input type="submit" value="Sign in">
       <p>Or</p>
       <p>New Registration</p>
-      <input type="button" value="Sign up now">
+      <input type="button" value="Sign up for new account">
     </form>
   </div>
 
