--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -8,7 +8,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
     />
     <div class="header">
-      <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
+      <a href="/">
+      <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" /></a>
       <div class="search-container">
         <input type="text" class="search-input" placeholder="Search..." />
         <button class="search-button">
