--- a/views/indox.ejs
+++ b/views/indox.ejs
@@ -19,7 +19,7 @@
 
     .login-box {
       background-color: #ffffff;
-      padding: 20px;
+      padding: 30px;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
       width: 500px;
       text-align: center;
@@ -74,8 +74,8 @@
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Registered Member’s Login</p>
     <form action="/login" method="POST">
-      <input type="text" name="username" placeholder="Username" required>
-      <input type="password" name="password" placeholder="Password" required>
+      <input type="text" id="usernameBox" name="username" placeholder="Email or Username" required>
+      <input type="password" id="passwordBox" name="password" placeholder="Password" required>
       <input type="submit" value="Sign in">
       <p>Or</p>
       <p>New Registration</p>
