--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,10 +37,11 @@
           <li><i class="bi bi-file-plus-fill"></i>&nbsp; Reservation</li>
           <li><i class="bi bi-gear-fill"></i>&nbsp; Settings</li>
           <li><i class="bi bi-door-open-fill"></i>&nbsp; Log out</li>
-          <li><button id="runDB">runDB</button></li>
         </ul>
+        <button id="runDB">runDB</button>
       </div>
       <div class="main-content"></div>
     </div>
   </body>
+  <script src="/javascripts/databaseAccess.js"></script>
 </html>
