--- a/views/indox.ejs
+++ b/views/indox.ejs
@@ -73,7 +73,7 @@
   <div class="login-box">
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Registered Member’s Login</p>
-    <form action="/login" method="POST">
+    <form action="/login" method="POST" onsubmit="submit_function()">
       <input type="text" id="username-box" name="username" placeholder="Email or Username" required>
       <input type="password" id="password-box" name="password" placeholder="Password" required>
       <input type="submit" id="sumbit-button" value="Sign in">
