--- a/views/indox2.ejs
+++ b/views/indox2.ejs
@@ -38,6 +38,7 @@
     .login-box input[type="date"],
     .login-box input[type="email"],
     .login-box input[type="submit"],
+    .login-box input[type="number"],
     .login-box input[type="password"] {
       width: 80%;
       padding: 7px;
@@ -66,11 +67,13 @@
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Create an Account</p>
     <form action="/login" method="POST">
-    <input type="email" id= "emailBox" name="emailaddress" placeholder="Email Address" required>
+      <input type="text" id="fullnameBox" name="name" placeholder="Full Name" required>
+      <input type="email" id= "emailBox" name="email" placeholder="Email Address" required>
       <input type="text" id="usernameBox" name="username" placeholder="Username" required>
       <input type="password" id="passwordBox" name="password" placeholder="Password" required>
+      <input type="password" id="confirmBox" name="confirm" placeholder="Confirm Password" required>
       <input type="date" id="dobBox" name="DOB" placeholder="Date of Birth" required>
-      <input type="text" id="addressBox" name="address" placeholder="Address" required>
+      <input type="number" id="numberBox" name="number" placeholder="Number" required>
       <input type="submit" value="Sign up now">
     </form>
   </div>
