--- a/views/indox.ejs
+++ b/views/indox.ejs
@@ -73,14 +73,18 @@
   <div class="login-box">
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Registered Member’s Login</p>
+    
     <form action="/login" method="POST">
       <input type="text" id="username-box" name="username" placeholder="Email or Username" required>
       <input type="password" id="password-box" name="password" placeholder="Password" required>
-      <input type="submit" id="sumbit-button" value="Sign in">
+      
+      <input type="submit" id="ubmit-button" value="Sign in">
       <p>Or</p>
       <p>New Registration</p>
       <input type="button" value="Sign up for new account">
     </form>
+    <button id="submit-button">button</button>
   </div>
 </body>
+<script src="/javascripts/databaseAccess.js"></script>
 </html>
