--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,16 +33,15 @@ a:active {
 }
 
 .container {
-  display: flex; /* Use flexbox for layout */
+  display: flex;
 }
 
-/* Sidebar */
 .sidebar {
-  width: 100%; /* Sidebar takes 20% of the width */
+  width: 100%;
   background-color: #cfd0e8;
   padding: 20px;
   margin: 0;
-  height: calc(100vh - 60px); /* Full height minus the header height */
+  height: calc(100vh - 60px);
   flex-basis: 10%;
 }
 
@@ -55,10 +54,9 @@ a:active {
   list-style-type: none;
 }
 
-/* Main Content */
 .main-content {
   padding: 20px;
-  width: 100%; /* Takes the remaining 80% */
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -79,7 +77,7 @@ a:active {
   border: none;
   outline: none;
   font-size: 16px;
-  border-radius: 25px 0 0 25px; /* Rounded corners */
+  border-radius: 25px 0 0 25px;
 }
 
 .search-button i {
