--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,7 @@ a:active {
   padding: 20px;
   width: 100%;
   box-sizing: border-box;
+  background-color: #dedfef;
 }
 
 .search-container {
@@ -93,4 +94,27 @@ a:active {
   justify-content: space-between;
   width: 100%;
   align-items: center;
+}
+
+.recommendation {
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.book {
+  flex-basis: 13%;
+}
+
+.book img {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.recommendation-books {
+  gap: 15px;
+  margin-top: 10px;
+  display: flex;
 }
