--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,10 +45,43 @@
       <div class="main-content">
         <div class="recommendation">
           <h2>Recommended</h2>
-          <div class="recommendation-books">
+          <div style="overflow-x: scroll">
+            <div class="recommendation-books">
+              <div>
+                <% recommendations.forEach((book) => { %>
+                <div class="book">
+                  <div class="book-img">
+                    <img
+                      src="<%= book.image %>"
+                      alt="The Psychology Of Money"
+                    />
+                  </div>
+                  <h3><%= book.name %></h3>
+                  <p><%= book.author %></p>
+                </div>
+                <% }); %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="categories">
+          <h2>Categories</h2>
+          <div class="categories-buttons">
+            <button class="button">All</button>
+            <button class="button">Sci-Fi</button>
+            <button class="button">Fantasy</button>
+            <button class="button">Drama</button>
+            <button class="button">Romance</button>
+            <button class="button">Business</button>
+            <button class="button">Education</button>
+            <button class="button">Geography</button>
+          </div>
+          <div class="categories-books">
             <% recommendations.forEach((book) => { %>
             <div class="book">
-              <img src="<%= book.image %>" alt="The Psychology Of Money" />
+              <div class="book-img">
+                <img src="<%= book.image %>" alt="The Psychology Of Money" />
+              </div>
               <h3><%= book.name %></h3>
               <p><%= book.author %></p>
             </div>
