--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -7,37 +7,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
     />
-    <div class="header">
-      <a href="/">
-      <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" /></a>
-      <div class="search-container">
-        <input type="text" class="search-input" placeholder="Search..." />
-        <button class="search-button">
-          <i class="fas fa-search"></i>
-        </button>
-      </div>
-    </div>
   </head>
 
   <body>
+    <%- include('./partials/header'); %>
     <h1 class="header-title">Wishlist</h1>
 
     <div class="container">
-      <div class="sidebar">
-        <ul>
-          <li>
-            <a href="/"><i class="bi bi-house-heart-fill"></i>&nbsp; Home</a>
-          </li>
-          <li>
-            <a href="/wishlist"
-              ><i class="bi bi-star-fill"></i>&nbsp; Wishlist</a
-            >
-          </li>
-          <li><i class="bi bi-file-plus-fill"></i>&nbsp; Reservation</li>
-          <li><i class="bi bi-gear-fill"></i>&nbsp; Settings</li>
-          <li><i class="bi bi-door-open-fill"></i>&nbsp; Log out</li>
-        </ul>
-      </div>
+      <%- include('./partials/sidebar'); %>
       <div class="main-content"></div>
     </div>
   </body>
