feat: fetch books from the database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
             <button class="button">Geography</button>
           </div>
           <div class="categories-books">
-            <% recommendations.forEach((book) => { %>
+            <% books.forEach((book) => { %>
             <div class="book">
               <div class="book-img">
                 <div class="book-wishlist">
