--- a/views/login.ejs
+++ b/views/login.ejs
@@ -73,7 +73,7 @@
   <div class="login-box">
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Registered Member’s Login</p>
-    <form id="loginForm" action="/" method="SEND" onsubmit="return validateMyForm();">
+    <form id="loginForm" action="/" method="SEND">
       <input type="text" id="username-box" name="username" placeholder="Email or Username" required>
       <input type="password" id="password-box" name="password" placeholder="Password" required>
       <input type="submit" id="ubmit-button" value="Sign in">
@@ -84,9 +84,7 @@
   </div>
 </body>
 <script>
-  function validateMyForm(){
-    return true;
-  }
+
 </script>
-<script src="/javascripts/databaseAccess.js"></script>
+<script src="/javascripts/script.js"></script>
 </html>
