--- a/views/login.ejs
+++ b/views/login.ejs
@@ -73,7 +73,7 @@
   <div class="login-box">
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Registered Member’s Login</p>
-    <form id="loginForm" action="/" method="SEND">
+    <form id="loginForm" action="/login" method="post">
       <input type="text" id="username-box" name="username" placeholder="Email or Username" required>
       <input type="password" id="password-box" name="password" placeholder="Password" required>
       <input type="submit" id="ubmit-button" value="Sign in">
