--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -6,7 +6,8 @@
     <li>
       <a href="/wishlist"><i class="bi bi-star-fill"></i>&nbsp; Wishlist</a>
     </li>
-    <li><i class="bi bi-file-plus-fill"></i>&nbsp; Reservation</li>
+    <li>
+      <a href="/reservations"><i class="bi bi-file-plus-fill"></i>&nbsp; Reservations</a>
     <li><i class="bi bi-gear-fill"></i>&nbsp; Settings</li>
     <li><i class="bi bi-door-open-fill"></i>&nbsp; Log out</li>
   </ul>
