--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,10 +49,12 @@
                         style="color: <%= book.wishlisted ? 'yellow' : 'black' %>"
                       ></i>
                     </div>
+                    <a href="/media?id=<%= book.id %>">
                     <img
                       src="<%= book.image %>"
                       alt="The Psychology Of Money"
                     />
+                  </a>
                   </div>
                   <h3><%= book.name %></h3>
                   <p><%= book.author %></p>
@@ -84,8 +86,12 @@
                     style="color: <%= book.wishlisted ? 'yellow' : 'black' %>"
                   ></i>
                 </div>
-                <img src="<%= book.image %>" alt="The Psychology Of Money" />
-              </div>
+                <a href="/media?id=<%= book.id %>">
+                  <img
+                    src="<%= book.image %>"
+                    alt="The Psychology Of Money"
+                  />
+                </a>              </div>
               <h3><%= book.name %></h3>
               <p><%= book.author %></p>
             </div>
