--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -66,7 +66,7 @@
   <div class="login-box">
     <img src="/images/LibLogo.png" alt="Library Logo" class="logo-img" />
     <p>Create an Account</p>
-    <form action="/login" method="POST">
+    <form action="/signup" method="POST">
       <input type="text" id="fullnameBox" name="name" placeholder="Full Name" required>
       <input type="email" id= "emailBox" name="email" placeholder="Email Address" required>
       <input type="text" id="usernameBox" name="username" placeholder="Username" required>
