--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -21,7 +21,7 @@
           <div class="book">
             <div class="book-img">
               <div class="book-wishlist" data-id="<%= book.id %>">
-                <i class="bi bi-star-fill" style="color: black"></i>
+                <i class="bi bi-dash-circle-fill" style="color: black"></i>
               </div>
               <img src="<%= book.image %>" alt="The Psychology Of Money" />
             </div>
@@ -36,10 +36,10 @@
   <script>
     document.querySelectorAll(".book-wishlist").forEach((element) => {
       const star = element.querySelector("i");
-      star.style["color"] = "yellow";
+      star.style["color"] = "red";
 
       element.addEventListener("click", async () => {
-        const request = await fetch("/wishlist", {
+        const request = await fetch("/reservations", {
           method: "POST",
           body: JSON.stringify({
             mediaId: element.dataset.id,
