--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
                     <div class="book-wishlist" data-id="<%= book.id %>">
                       <i
                         class="bi bi-star-fill"
-                        style="color: <%= book.wishlisted ? 'yellow' : 'black' %>"
+                        style="color: <%= book.wishlisted ? 'gold' : 'black' %>"
                       ></i>
                     </div>
                     <img
