--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -176,13 +176,19 @@ a:active {
   gap: 1.5rem;
   grid-template-columns: repeat(1, 1fr);
 }
+
+.media-items {
+  text-align: left;
+}
+
 #book-container {
 background-color: #fff;
 padding: 20px;
 border-radius: 8px;
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-max-width: 400px;
+max-width: fit-content;
 text-align: center;
+display: flex;
 }
 
 #book-title {
@@ -217,6 +223,26 @@ padding: 0;
 font-size: 14px;
 color: #444;
 margin-bottom: 5px;
+}
+
+#media-page-cover {
+  float: left;
+  width: 30%;
+  height: auto;
+  margin: 20px 0;
+  border-radius: 8px;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 1%;
+}
+
+#media-page-list {
+  list-style-type: none
+}
+
+#media-buttons {
+  text-align: right;
+  padding-right: 5%;
 }
 
 button {
