chaznges BEHIND U MAMA

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
                 <div class="book-wishlist" data-id="<%= book.id %>">
                   <i
                     class="bi bi-star-fill"
-                    style="color: <%= book.wishlisted ? 'yellow' : 'black' %>"
+                    style="color: <%= book.wishlisted ? 'gold' : 'black' %>"
                   ></i>
                 </div>
                 <a href="/media?id=<%= book.id %>">
