--- a/views/media.ejs
+++ b/views/media.ejs
@@ -66,10 +66,9 @@
           </li>
           <li class="media-items" contenteditable="false">
             <h3 id="book-description"><%= book.description %></h3>
-            </ul>
           </li>
-          <li class="media-items">
-            <button id="delete-button" hidden>Delete</button>
+          <li class="media-items" style="float: right;">
+            <button id="delete-button" hidden>Delete Book</button>
             <button id="save-button" hidden>Save</button>
           </li>
         </ul>
